# wr_kin_model_gazebo

./: CMakeLists.txt  README.md  cameras  get_eigen.sh  kill_gz.sh  kin.world  kin_world_start.sh  package.xml  prepare.sh  surf.world
models/main_surf/: model.config  model.sdf
models/rock1/: model.config  model.sdf
models/rock1/meshes/: rock1.stl
models/rock2/: model.config  model.sdf
models/surf/: model.config  model.sdf
models/tree1/: model.config  model.sdf
models/tree1/meshes/: tree01.stl
models/tree2/: model.config  model.sdf
models/wr/: model _old.sdf  model.config  model.sdf
plugins/: .gitignore
plugins/kin_plugin/: .gitignore  CMakeLists.txt  package.xml  rebuild.sh
plugins/kin_plugin/include/: curve_math.h  mshw_geolib.h
plugins/kin_plugin/src/: curve_math.cpp  gazeboWrKinPlugin.cpp  gazeboWrSpawnRoute.cpp  gazebo_spawn_node.cpp
plugins/surf_lib/include/: rtwtypes.h  surf_fcn.h  surf_fcn_initialize.h  surf_fcn_spec.h  surf_fcn_types.h
plugins/surf_lib/python_wrapper/: python_wrapper.cpp
plugins/surf_lib/src/: surf_fcn.cpp  surf_fcn_initialize.cpp  surf_fcn_terminate.cpp
plugins/surf_lib_python/: CMakeLists.txt  test_import.py
scripts/: generate_world.py  kin_obstacles_generated.world  obstacle.template  world.template
