<?xml version="1.0"?>
<package>
  <name>kin_model</name>
  <version>0.1.1</version>
  <description>ros_kin_model</description>
  <author email="shawinmihail@gmail.com">shawinmihail</author>
  <maintainer email="shawinmihail@gmail.com">shawinmihail</maintainer>
  <license>commertial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wr_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
